apps/leaven-api-temp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaven-api-temp
  namespace: api
  labels:
    app: leaven-api-temp
spec:
  selector:
    matchLabels:
      app: leaven-api-temp
  template:
    metadata:
      labels:
        app: leaven-api-temp
    spec:
      containers:
      - name: leaven-api-temp
        image: hyeonwoo5342/leaven-api-temp:2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: '160Mi'
            cpu: '50m'
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
