apps/leaven-api-temp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leaven-api-temp-ingress
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api-v2.leaven.team
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: leaven-api-temp
            port:
              number: 80
